Fixed jump on menu open

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 #menu-toggle {
-    position: absolute;
+    position: fixed;
     opacity: 0;
 }
 
